# whole_planner_v1

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
config/perception/material_boundary_extrinsic/: default.yaml  prototype.yaml
config/plc/: mock_sequence.yaml  real_plc.example.yaml
docs/: ARCHITECTURE.md  CHANGELOG_PHASED.md  DEVELOPMENT_WORKFLOW.md  INTERFACES.md  LEADERSHIP_DEMO_ONE_PAGER.md  RUNBOOK.md  SYSTEM_OVERVIEW_AND_STARTUP.md
scripts/: build_phase2_minimal.sh  build_workspace.sh  clean_legacy_artifacts.sh  run_phase1_mock.sh  run_phase2_real.sh  run_profile.sh
src/excavation_planner_core/: package.xml  setup.cfg  setup.py
src/excavation_planner_core/excavation_planner_core/: action_server.py  legacy_dig_planner_orchestrator.py  legacy_perception_notifier.py  mock_pointcloud_server.py  mock_runtime.py
src/excavation_planner_core/test/: test_legacy_dig_planner_orchestrator.py  test_mock_runtime.py
src/integrated_mission_interfaces/: CMakeLists.txt  package.xml
src/integrated_mission_interfaces/action/: DigMission.action  WalkMission.action
src/integrated_mission_interfaces/msg/: PlannerMode.msg  PlcSnapshot.msg  SubsystemStatus.msg
src/integrated_mission_interfaces/srv/: ComputeMaterialTarget.srv  ExtractMaterialBoundary.srv  SubmitMission.srv
src/mission_bringup/: package.xml  setup.cfg  setup.py
src/mission_bringup/launch/: integrated.launch.py  phase1_mock.launch.py  phase2_real.launch.py
src/mission_dispatcher/: package.xml  setup.cfg  setup.py
src/mission_dispatcher/mission_dispatcher/: dispatcher_node.py  state_machine.py  submit_demo_mission.py
src/mission_dispatcher/test/: test_state_machine.py
src/mission_operator_hmi/: package.xml  setup.cfg  setup.py
src/mission_operator_hmi/mission_operator_hmi/: helpers.py  integrated_operator_hmi.py
src/mission_operator_hmi/test/: test_helpers.py
src/mobility_planner_core/: package.xml  setup.cfg  setup.py
src/mobility_planner_core/mobility_planner_core/: action_server.py  lite_slam_swing_angle_bridge.py  material_boundary_extractor.py  material_target_input.py  material_target_layers.py  material_target_planner.py  mock_nav2_server.py  mock_runtime.py
src/mobility_planner_core/test/: test_material_boundary_extractor.py  test_material_target_planner.py  test_mock_runtime.py
src/plc_adapter/: package.xml  setup.cfg  setup.py
src/plc_adapter/plc_adapter/: plc_adapter_node.py
src/plc_adapter/test/: test_mapping.py
