<?xml version="1.0"?>
<package format="3">
  <name>integrated_mission_interfaces</name>
  <version>0.1.0</version>
  <description>Interfaces for integrated mission planning.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
