<?xml version="1.0"?>
<package format="3">
  <name>mission_dispatcher</name>
  <version>0.1.0</version>
  <description>Top-level mission dispatcher state machine.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>integrated_mission_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
