<?xml version="1.0"?>
<package format="3">
  <name>plc_adapter</name>
  <version>0.1.0</version>
  <description>PLC adapter with mock and real backends.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>integrated_mission_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
